<resources>
    <string name="app_name">毕业设计</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="number_86">+86</string>
    <string name="username">用户名：</string>
    <string name="username_hint">手机号</string>
    <string name="identifying_code">发送验证码</string>
    <string name="identifying_code_hint">验证码</string>
    <string name="password">密码：</string>
    <string name="password_hint">在这儿输入密码</string>
    <string name="searching">寻找</string>
    <string name="heart_wall">心声墙</string>
    <string name="myself">本人</string>
    <string name="choose_your_label">选择你的个性标签</string>
    <string name="choose_your_label_english">初始化你的个人信息！</string>
    <string name="click_next">进入主页    ---></string>
    <string name="now_update_label">正在提交标签</string>
    <string name="heart_wall_get_acquainted">认识一下</string>
    <string name="bottom_now">已经到底啦~</string>
    <string name="hint_heart_wall">写下你的心声</string>
    <string name="chatted_list">聊过天的人</string>
    <string name="chatted_after">（聊天列表）</string>
    <string name="notify">通知</string>
    <string name="notify_after">（包含点赞、聊天信息）</string>
    <string name="user_help">客服帮助</string>
</resources>