<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_function" />

    <RelativeLayout
        android:id="@+id/bottom_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        android:clipToPadding="false">

        <View
            android:id="@+id/view_line"
            style="@style/HorizontalNormalDividerLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100"
            android:layout_below="@+id/view_line"
            android:background="#fff"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ct_heart_wall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/iv_heart_wall"
                    android:layout_width="@dimen/dimen_80"
                    android:layout_height="@dimen/dimen_80"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/selector_heart_wall_main_icon" />

                <TextView
                    android:id="@+id/tv_heart_wall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/heart_wall"
                    android:textColor="@color/text_color_blue_grey_select"
                    android:textSize="@dimen/font_20" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ct_searching"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/iv_searching"
                    android:layout_width="@dimen/dimen_80"
                    android:layout_height="@dimen/dimen_80"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/selector_searching_main_icon" />

                <TextView
                    android:id="@+id/tv_searching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/searching"
                    android:textColor="@color/text_color_blue_grey_select"
                    android:textSize="@dimen/font_20" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ct_myself"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/iv_myself"
                    android:layout_width="@dimen/dimen_80"
                    android:layout_height="@dimen/dimen_80"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/selector_myself_main_icon" />

                <TextView
                    android:id="@+id/tv_myself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/myself"
                    android:textColor="@color/text_color_blue_grey_select"
                    android:textSize="@dimen/font_20" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>